[package]
name = "encnotes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6"
rand = "0.9"
rpassword = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1", features = ["v4"] }
